adding mail chimp sign up form at bottom of homepage

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -114,3 +114,44 @@
 		</div><!-- close .row -->
 	</div><!-- close .container -->
 </section>
+
+<section id="sign-up">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6 col-sm-offset-3 col-xs-12">
+				<h2 class="text-center">Treat Your Inbox</h2>
+					<!-- Begin MailChimp Signup Form -->
+					<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+					<style type="text/css">
+						/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+						   #mc_embed_signup input.email{
+						   		margin: 0px;
+						   		padding: 6px 12px;
+						   		text-indent: 0px;
+						   		width: 100%;
+						   }
+
+						   #mc_embed_signup input {
+						   	border:none;
+						   }
+					</style>
+					<div id="mc_embed_signup">
+					<form action="//leema.us9.list-manage.com/subscribe/post?u=fe76382460426af73d53fa5ed&amp;id=23cdff1ccd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    <div class="input-group">
+					      <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="Email Address" required>
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;"><input type="text" name="b_fe76382460426af73d53fa5ed_23cdff1ccd" tabindex="-1" value=""></div>
+					      <span class="input-group-btn">
+					        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
+					      </span>
+					    </div><!-- /input-group -->
+
+					</form>
+					</div>
+
+					<!--End mc_embed_signup-->
+			</div>
+		</div><!-- close .row -->
+	</div><!-- close .container -->
+</section>
