--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
 	<div class="container">
 		<div class="row">
 			<h1 class="text-center">Welcome to <span class="logo">Leema</span></h1>
-			<p class="text-center lead">The marketplace that allows you to buy food from culinary artists around the country.</p>
+			<p class="text-center lead">The marketplace that connects culinary artists to people with great taste.</p>
 			<%= image_tag "postmates.png", class: 'img-responsive center' %>
 		</div><!-- /.row -->
 	</div><!-- /.container -->
