--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -330,3 +330,13 @@ footer ul.social li a {
 footer ul.social li a:hover {
 	border: 3px solid @brand-primary;
 }
+
+.footer-links {
+	text-align: right;
+}
+
+@media only screen and (max-width: 767px){
+	.footer-links, .copyright {
+		text-align: center;
+	}
+}
