--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,6 +6,7 @@
           <li><a href="https://www.facebook.com/pages/Leema/1505609129699476" target="_blank"><i class="fa fa-facebook"></i></a></li>
           <li><a href="http://instagram.com/leemaeats" target="_blank"><i class="fa fa-instagram"></i></a></li>
           <li><a href="https://twitter.com/leemaeats" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <!-- <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li> -->
         </ul>
       </div><!-- close .col-xs-12 -->
     </div><!-- close .container -->
@@ -13,11 +14,11 @@
   <div class="bottom">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-4 col-xs-12 copyright">
           <p>&copy; Leema <%= Time.now.year %></p>
         </div>
-        <div class="col-sm-6">
-          <ul class="list-inline text-right">
+        <div class="col-sm-8 col-xs-12">
+          <ul class="list-inline footer-links">
             <li><a href="#">Terms of Service</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Privacy Policy</a></li>
