--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
           <li><a href="https://www.facebook.com/pages/Leema/1505609129699476" target="_blank"><i class="fa fa-facebook"></i></a></li>
           <li><a href="http://instagram.com/leemaeats" target="_blank"><i class="fa fa-instagram"></i></a></li>
           <li><a href="https://twitter.com/leemaeats" target="_blank"><i class="fa fa-twitter"></i></a></li>
-          <!-- <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li> -->
+          <li><a href="https://www.youtube.com/channel/UC7UjjURDMJgkWiMWKeqE10w?guided_help_flow=3" target="_blank"><i class="fa fa-youtube"></i></a></li>
         </ul>
       </div><!-- close .col-xs-12 -->
     </div><!-- close .container -->
