--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,6 +22,7 @@
             <li><a href="#">Terms of Service</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Privacy Policy</a></li>
+            <li><a href="/sell/">Become a Seller</a></li>
           </ul>
         </div>
       </div><!--/row-->
