adding placeholder content

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -281,6 +281,25 @@ input[type="radio"], input[type="checkbox"]{
 
 
 
+.icon-blurb {
+
+	&+.icon-blurb {
+		margin-top: 50px;
+	}
+
+	.icon {
+		display: inline-block;
+		vertical-align: middle;
+		width: 29%;
+	}
+
+	.blurb {
+		display: inline-block;
+		vertical-align: middle;
+		width: 69%;
+	}
+}
+
 
 /* Footer */
 footer {
