--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -8,3 +8,31 @@
 		</div><!-- close .row -->
 	</div><!-- close .container -->
 </section>
+<section>
+	<div class="container">
+		<div class="row icon-blurb">
+			<div class="icon">
+				<img src="http://placehold.it/200x200" class="img-responsive img-circle">
+			</div><!-- close .col-sm-3 -->
+			<div class="blurb">
+				<p>Phasellus vitae ultrices leo. Pellentesque facilisis, mauris eu molestie elementum, nisi leo hendrerit nunc, vel pretium dolor nisi in tellus. Cras mollis arcu quis purus semper lacinia. Fusce suscipit consequat neque, in porttitor nunc interdum vel. Proin aliquet lacus mauris, vitae convallis lectus congue in. Morbi finibus magna sapien, non euismod lorem cursus ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In felis risus, lobortis id purus nec, semper ullamcorper diam. Suspendisse vestibulum eros sit amet sollicitudin malesuada.</p>
+			</div>
+		</div><!-- close .row -->
+		<div class="row icon-blurb">
+			<div class="blurb">
+				<p>Phasellus vitae ultrices leo. Pellentesque facilisis, mauris eu molestie elementum, nisi leo hendrerit nunc, vel pretium dolor nisi in tellus. Cras mollis arcu quis purus semper lacinia. Fusce suscipit consequat neque, in porttitor nunc interdum vel. Proin aliquet lacus mauris, vitae convallis lectus congue in. Morbi finibus magna sapien, non euismod lorem cursus ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In felis risus, lobortis id purus nec, semper ullamcorper diam. Suspendisse vestibulum eros sit amet sollicitudin malesuada.</p>
+			</div>
+			<div class="icon">
+				<img src="http://placehold.it/200x200" class="img-responsive img-circle">
+			</div><!-- close .col-sm-3 -->
+		</div><!-- close .row -->
+		<div class="row icon-blurb">
+			<div class="icon">
+				<img src="http://placehold.it/200x200" class="img-responsive img-circle">
+			</div><!-- close .col-sm-3 -->
+			<div class="blurb">
+				<p>Phasellus vitae ultrices leo. Pellentesque facilisis, mauris eu molestie elementum, nisi leo hendrerit nunc, vel pretium dolor nisi in tellus. Cras mollis arcu quis purus semper lacinia. Fusce suscipit consequat neque, in porttitor nunc interdum vel. Proin aliquet lacus mauris, vitae convallis lectus congue in. Morbi finibus magna sapien, non euismod lorem cursus ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In felis risus, lobortis id purus nec, semper ullamcorper diam. Suspendisse vestibulum eros sit amet sollicitudin malesuada.</p>
+			</div>
+		</div><!-- close .row -->
+	</div><!-- close .container -->
+</section>
