--- a/app/assets/stylesheets/spree/frontend/screen.css.scss
+++ b/app/assets/stylesheets/spree/frontend/screen.css.scss
@@ -442,7 +442,7 @@ nav#taxonomies {
   margin: 35px 0 0;
 }
 
-.seller-name, .seller-logo {
+.seller-info {
   display: inline-block;
   vertical-align: middle;
 }
