--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -3,7 +3,10 @@
     <div class="col-sm-10 col-xs-8">
       <a href="#">
         <img class="seller-logo" src="http://placehold.it/100x100">
-        <h3 class="seller-name">Carly's Better Bites</h3>
+        <div class="seller-info">
+          <h3 class="seller-name">Carly's Better Bites</h3>
+          <p class="seller-location">New York, NY</p>
+        </div>
       </a>
     </div>
     <div class="col-sm-2 col-xs-4">
