adding heading styles

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -85,6 +85,34 @@ section {
   }
 }
 
+h1, .h1 {
+	font-size: 44px;
+	margin-top: 40px;
+	margin-bottom:	20px;
+}
+
+h2, .h2 {
+	font-size: 36px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+h3, .h3 {
+	font-size: 28px;
+}
+
+h4, .h4 {
+	font-size: 22px;
+}
+
+h5, .h5 {
+	font-size: 18px;
+}
+
+h6, .h6 {
+	font-size: 14px;
+}
+
 p {
 	padding: 0px;
 }
@@ -153,6 +181,10 @@ input[type="radio"], input[type="checkbox"]{
 
 .navbar {
 	z-index: 1000;
+}
+
+.navbar-form .input-group .input-group-btn {
+	border:1px solid @brand-primary;
 }
 
 .logo img{
@@ -291,6 +323,16 @@ input[type="radio"], input[type="checkbox"]{
 		display: inline-block;
 		vertical-align: middle;
 		width: 29%;
+		text-align: center;
+
+		i {
+			font-size: 200px;
+		}
+
+		img {
+			margin: 0px auto;
+			display: block;
+		}
 	}
 
 	.blurb {
