adding mastheads for sell and homepages

--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -3,17 +3,48 @@
     font-size: 16px;
 }
 
-.homepage .navbar-default {
+/* .homepage .navbar-default {
     background: transparent;
 }
+ */
 
-.masthead {
+.intro {
+    h1 {
+        margin-bottom: 60px;
+        color: #fff;
+    }
+}
+
+.masthead.home {
     position: relative;
     padding: 30px 15px;
     color: #cdbfe3;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0,0,0,.1);
-    background: image-url("masthead.jpg");
+    background: image-url("masthead-dark.jpg");
+    background-repeat: no-repeat;
+    z-index: 1;
+    min-height: 300px;
+    background-color: transparent;
+    background-attachment: scroll;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    -webkit-transition: background-image 1s ease-in-out;
+    transition: background-image 1s ease-in-out
+}
+
+.masthead.sell {
+    position: relative;
+    padding: 30px 15px;
+    color: #cdbfe3;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(0,0,0,.1);
+    background: image-url("leema-sell-bg-dark.jpg");
     background-repeat: no-repeat;
     z-index: 1;
     min-height: 300px;
@@ -67,13 +98,6 @@
     border-width: 3px;
 }
 
-#welcome h1 {
-    font-size: 30px;
-}
-
-#welcome p.lead {
-    font-size: 18px;
-}
 
 @media (min-width: 990px) {
     .input-group .form-control.main-search {
@@ -134,10 +158,6 @@
     #welcome p.lead {
         font-size: 30px;
     }
-}
-
-#welcome-product-grid {
-    padding-top: 0px;
 }
 
 
