--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -38,37 +38,8 @@
   <%= javascript_include_tag "application" %>
 </head>
 <body class="homepage">
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="logo" href="/"><%= image_tag "leema-logo.png", class: 'img-responsive' %></a>
-      </div>
+  <%= render :partial => 'shared/header' %>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <% if signed_in? %>
-            <li>
-              <a href="/<%= current_user.id %>"><%= image_tag current_user.gravatar_url, class: 'gravatar' %> <%= current_user.first_name %></a>
-              </li>
-            <li><%= link_to "Browse", spree_path %></li>
-            <li><%= link_to "Log Out", logout_path %></li>
-          <% else %>
-            <li><%= link_to "Browse", spree_path %></li>
-            <li><%= link_to "Log In", signin_path %></li>
-            <li><%= link_to "Register", register_path %></li>
-          <% end %>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
   <!--Alert messages for Devise user authentication -->
     <%= yield %>
 
