--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -1,38 +1,67 @@
+<section class="masthead sell" id="content" role="main">
+  <div class="container">
+		<div class="row">
+			 <div class="col-xs-12 intro">
+				<h1>Let Everyone Taste Your Passion</h1>
+				<a href="#" class="btn btn-lg btn-primary">Sell With Leema</a>
+		  </div>
+		</div>
+  </div><!-- /.container -->
+</section><!-- /.masthead -->
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 text-center">
-				<h1>Let Everyone Taste Your Passion</h1>
-				<a href="#" class="btn btn-lg btn-primary">Sell With Leema</a>
-			</div><!-- close .col-xs-12 -->
-		</div><!-- close .row -->
-	</div><!-- close .container -->
+			<h2 class="text-center">What can you sell on Leema?</h2>
+			<div class="col-sm-4">
+
+			</div>
+			<div class="col-sm-4">
+
+			</div>
+			<div class="col-sm-4">
+
+			</div>
+		</div>
+	</div>
 </section>
 <section>
 	<div class="container">
 		<div class="row icon-blurb">
 			<div class="icon">
-				<img src="http://placehold.it/200x200" class="img-responsive img-circle">
+				<i class="fa fa-money"></i>
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
-				<p>Phasellus vitae ultrices leo. Pellentesque facilisis, mauris eu molestie elementum, nisi leo hendrerit nunc, vel pretium dolor nisi in tellus. Cras mollis arcu quis purus semper lacinia. Fusce suscipit consequat neque, in porttitor nunc interdum vel. Proin aliquet lacus mauris, vitae convallis lectus congue in. Morbi finibus magna sapien, non euismod lorem cursus ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In felis risus, lobortis id purus nec, semper ullamcorper diam. Suspendisse vestibulum eros sit amet sollicitudin malesuada.</p>
+				<h3>Free to Use</h3>
+				<p>Open your store and list your products on Leema...for FREE. Once you sell an item (mazel tov!), we take 10% of the item price, not including tax or shipping. We get paid, when you get paid. It’s that simple.</p>
 			</div>
 		</div><!-- close .row -->
 		<div class="row icon-blurb">
 			<div class="blurb">
-				<p>Phasellus vitae ultrices leo. Pellentesque facilisis, mauris eu molestie elementum, nisi leo hendrerit nunc, vel pretium dolor nisi in tellus. Cras mollis arcu quis purus semper lacinia. Fusce suscipit consequat neque, in porttitor nunc interdum vel. Proin aliquet lacus mauris, vitae convallis lectus congue in. Morbi finibus magna sapien, non euismod lorem cursus ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In felis risus, lobortis id purus nec, semper ullamcorper diam. Suspendisse vestibulum eros sit amet sollicitudin malesuada.</p>
+				<h3>It Only Takes Minutes</h3>
+				<p>Fill out some information, add a few pictures, and you’re ready to go! Once your store is created there is no upkeep required just get back to making the things you love and let us handle the rest.</p>
 			</div>
 			<div class="icon">
-				<img src="http://placehold.it/200x200" class="img-responsive img-circle">
+				<i class="fa fa-clock-o"></i>
 			</div><!-- close .col-sm-3 -->
 		</div><!-- close .row -->
 		<div class="row icon-blurb">
 			<div class="icon">
-				<img src="http://placehold.it/200x200" class="img-responsive img-circle">
+				<i class="fa fa-compass"></i>
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
-				<p>Phasellus vitae ultrices leo. Pellentesque facilisis, mauris eu molestie elementum, nisi leo hendrerit nunc, vel pretium dolor nisi in tellus. Cras mollis arcu quis purus semper lacinia. Fusce suscipit consequat neque, in porttitor nunc interdum vel. Proin aliquet lacus mauris, vitae convallis lectus congue in. Morbi finibus magna sapien, non euismod lorem cursus ac. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In felis risus, lobortis id purus nec, semper ullamcorper diam. Suspendisse vestibulum eros sit amet sollicitudin malesuada.</p>
+				<h3>Discovery Made Easy</h3>
+				<p>Leema gives you direct access to people specifically looking to eat up the unique creations that our Culinary Artists create. This access ensures that you are targeting the right demographic and optimizing the potential of your store.</p>
 			</div>
 		</div><!-- close .row -->
 	</div><!-- close .container -->
+</section>
+
+<section>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 text-center">
+				<a href="#" class="btn btn-lg btn-primary">Sell With Leema</a>
+			</div>
+		</div>
+	</div>
 </section>
