changing to fake store name

--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -3,11 +3,13 @@
     <div class="col-sm-10 col-xs-8">
       <a href="#">
         <img class="seller-logo" src="http://placehold.it/100x100">
-        <div class="seller-info">
-          <h3 class="seller-name">Carly's Better Bites</h3>
-          <p class="seller-location">New York, NY</p>
-        </div>
       </a>
+        <div class="seller-info">
+          <a href="#">
+            <h3 class="seller-name">Scott's Bake Shop</h3>
+          </a>
+          <p class="seller-location"><i class="fa fa-map-marker"></i> New York, NY</p>
+        </div>
     </div>
     <div class="col-sm-2 col-xs-4">
         <a href="#" class="btn btn-favorite">
