adding updated logo

--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -61,6 +61,9 @@
     transition: background-image 1s ease-in-out
 }
 
+.check {
+    color: green;
+}
 
 .input-group .form-control.main-search {
     background: rgba(255,255,255,.7) !important;
