--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -12,14 +12,10 @@
 	<div class="container">
 		<div class="row">
 			<h2 class="text-center">What can you sell on Leema?</h2>
-			<div class="col-sm-4">
-
-			</div>
-			<div class="col-sm-4">
-
-			</div>
-			<div class="col-sm-4">
-
+			<div class="col-sm-6 col-sm-offset-3">
+				<h3><span class="check"><i class="fa fa-check-circle-o"></i></span> Can it be shipped or delivered?</h3>
+				<h3><span class="check"><i class="fa fa-check-circle-o"></i></span> Is your product edible?</h3>
+				<h3><span class="check"><i class="fa fa-check-circle-o"></i></span> Is your product your passion?</h3>
 			</div>
 		</div>
 	</div>
