--- a/app/assets/stylesheets/spree/frontend/screen.css.scss
+++ b/app/assets/stylesheets/spree/frontend/screen.css.scss
@@ -511,6 +511,10 @@ nav#taxonomies {
   }
 }
 
+#custom-order{
+  margin: 0px 0 20px;
+}
+
 span.price {
   font-weight: bold;
   color: $link_text_color;
