--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -113,6 +113,37 @@ h6, .h6 {
 	font-size: 14px;
 }
 
+@media (max-width: 767px) {
+	h1, .h1 {
+		font-size: 36px;
+		margin-top: 30px;
+		margin-bottom:	10px;
+	}
+
+	h2, .h2 {
+		font-size: 28px;
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
+
+	h3, .h3 {
+		font-size: 24px;
+	}
+
+	h4, .h4 {
+		font-size: 18px;
+	}
+
+	h5, .h5 {
+		font-size: 14px;
+	}
+
+	h6, .h6 {
+		font-size: 12px;
+	}
+}
+
+
 p {
 	padding: 0px;
 }
@@ -135,6 +166,10 @@ label {
 
 input[type="radio"], input[type="checkbox"]{
 	margin: 0px;
+}
+
+textarea {
+	max-width: 100% !important;
 }
 
 .btn, a.button {
