--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -46,11 +46,32 @@
 			</div><!-- close .col-sm-3 -->
 			<div class="blurb">
 				<h3>Discovery Made Easy</h3>
-				<p>Leema gives you direct access to people specifically looking to eat up the unique creations that our Culinary Artists create. This access ensures that you are targeting the right demographic and optimizing the potential of your store.</p>
+				<p>Leema gives direct access to people specifically looking to eat up the unique creations that our Culinary Artists create. This access ensures that you are targeting the right demographic and optimizing the potential of your store.</p>
 			</div>
 		</div><!-- close .row -->
 	</div><!-- close .container -->
 </section>
+
+<section>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<h2 class="text-center">Pricing</h2>
+				<div class="pricing-box">
+					<div class="pricing-percent">
+						10%
+						<div class="per-trans">Per Transaction</div>
+					</div><!-- close .pricing-percent -->
+				</div><!-- close .pricing-box -->
+				<p class="text-center">
+					<strong>10% per online purchase - that's it.</strong>
+				</p>
+				<p class="text-center">Open your store and list your products on Leema...for FREE. Once you sell an item (mazel tov!), we take 10% of the item price, not including tax or shipping. We get paid, when you get paid. It’s that simple.</p>
+			</div><!-- close .col-xs-12 -->
+		</div><!-- close .row -->
+	</div><!-- close .container -->
+</section>
+
 
 <section>
 	<div class="container">
