--- a/app/views/sell/index.html.erb
+++ b/app/views/sell/index.html.erb
@@ -63,11 +63,13 @@
 						<div class="per-trans">Per Transaction</div>
 					</div><!-- close .pricing-percent -->
 				</div><!-- close .pricing-box -->
+			</div><!-- close .col-xs-12 -->
+			<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 				<p class="text-center">
 					<strong>10% per online purchase - that's it.</strong>
 				</p>
-				<p class="text-center">Open your store and list your products on Leema...for FREE. Once you sell an item (mazel tov!), we take 10% of the item price, not including tax or shipping. We get paid, when you get paid. It’s that simple.</p>
-			</div><!-- close .col-xs-12 -->
+				<p class="text-center">Open your store and list your products on Leema...for FREE. Once you sell an item (mazel tov!), we take 10% of the item price, not including tax or shipping. We also cover the credit card transaction fee. It's simple, we get paid, when you get paid.</p>
+			</div>
 		</div><!-- close .row -->
 	</div><!-- close .container -->
 </section>
