adding flexnav min js

--- a/app/assets/javascripts/spree/backend/admin.js.erb
+++ b/app/assets/javascripts/spree/backend/admin.js.erb
@@ -6,6 +6,7 @@
 //= require spree/backend/user_picker
 //= require spree/backend/product_picker
 //= require spree/backend/taxons
+//= require spree/backend/jquery.flexnav.min
 
 /**
 This is a collection of javascript functions and whatnot
