--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			 <div class="col-xs-12 intro">
 				 	<h1 class="text-center">The marketplace that connects culinary artists to people with great taste.</h1>
-			  	<a href="#" class="btn btn-lg btn-primary">Browse Our Products</a>
+			  	<%= link_to "Browse Our Products", spree_path, class: "btn btn-lg btn-primary" %>
 		  </div>
 		</div>
   </div><!-- /.container -->
