--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -6,7 +6,7 @@
       </a>
         <div class="seller-info">
           <a href="#">
-            <h3 class="seller-name">Scott's Bake Shop</h3>
+            <h3 class="seller-name"><%= @product.supplier %></h3>
           </a>
           <p class="seller-location"><i class="fa fa-map-marker"></i> New York, NY</p>
         </div>
