--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,7 +5,7 @@
     <% else %>
       <%= image_tag("profile-placeholder.jpg", :alt => "Leema Cover Photo", :class => "section-cover-image img-responsive") %>
     <% end %>
-    <h1><%= @supplier.store_name %></h1>
+    <h1><%= @user.supplier.store_name %></h1>
   </div>
   <div class="container">
     <% if @user == current_user %>
@@ -26,7 +26,7 @@
         <h3><%= @user.full_name %></h3>
         <p class="text-muted"><i class="fa fa-map-marker"></i>  <%= @user.city %>, <%= @user.state %></p>
         <p class="text-muted"><i class="fa fa-clock-o"></i> Joined <%= @user.created_at.strftime('%B %Y') %></p>
-        <p class="text-muted"><%= @user.products.count %> Products Listed</p>
+        <p class="text-muted"><%= @user.supplier.products.count %> Products Listed</p>
         <a href="#" class="btn btn-favorite"> Favorite</a>
       </div>
 
