--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,6 +41,11 @@
         </div>
 
         <div class="form-group">
+          <%= f.label :store_name %>
+          <%= f.text_field :store_name, autocomplete: "off", class: 'form-control' %>
+        </div>
+
+        <div class="form-group">
           <%= f.label :cover_photo %>
           <%= f.file_field :cover_photo %>
         </div>
