--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,17 +20,18 @@
             <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: "Search" %>
             <span class="input-group-btn">
               <%= button_tag(type: 'submit', class: 'btn btn-primary', :name => nil) do %>
-              <i class="fa fa-search"></i>
+                <i class="fa fa-search"></i>
               <% end %>
             </span>
           </div><!-- /input-group -->
-        <% end %>
+          <% end %>
           <li><%= link_to "Browse", spree_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.gravatar_url, class: 'gravatar' %><%= current_user.first_name %> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="/<%= current_user.id %>">Profile</a></li>
               <li class="divider"></li>
+              <li><%= link_to "My Store", "/store/admin" %>
               <li><%= link_to "Edit Profile", edit_path(@user) %></li>
               <li><%= link_to "Log Out", logout_path %></li>
             </ul>
