Removed controllers that may interfere with sign in redirects

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -31,7 +31,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><a href="/<%= current_user.id %>">Profile</a></li>
               <li class="divider"></li>
-              <li><%= link_to "My Store", "/store/admin" %>
+              <li><%= link_to "My Store", "/store/admin" %></li>
               <li><%= link_to "Edit Profile", edit_path(@user) %></li>
               <li><%= link_to "Log Out", logout_path %></li>
             </ul>
