--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,7 +6,11 @@
       <%= image_tag("profile-placeholder.jpg", :alt => "Leema Cover Photo", :class => "section-cover-image img-responsive") %>
     <% end %>
     <h1>
-      <%= @user.full_name %>
+      <% if @user.store_name != nil %>
+        <%= @user.store_name %>
+      <% else %>
+        <%= @user.full_name %>
+      <% end %>
     </h1>
   </div>
   <div class="container">
