modifying profile and sell page.

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -50,7 +50,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="page-header">
-          <h3>Products</h3>
+          <h3><%= @user.first_name %>'s Products</h3>
         </div>
         <div id="products" class="row">
           <% @supplier.products.each do |product| %>
@@ -62,7 +62,7 @@
               <div class="product-info">
                 <h3><%= truncate(product.name, :length => 50) %></h3>
                 <p class="product-description"><%= truncate(product.description, :length => 70) %></p>
-                <p class="product-price" itemprop="price"><%= display_price(product) %></p>
+                <p class="product-price" itemprop="price"><%= product.price %></p>
               </div><!-- close .product-info -->
 
             </div><!-- close .product-card -->
