--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -350,6 +350,39 @@ textarea {
 	min-height: 60px;
 }
 
+/* Clear styles for product grid so there are always 3 or 2 products on the same line depending on screen width */
+/*  Tablet  */
+@media (min-width:767px){
+
+  /* Column clear fix */
+  #products {
+	  .col-md-4:nth-of-type(3n+1){
+	    clear: none;
+	  }
+
+	  .col-sm-6:nth-of-type(2n+1){
+	    clear: left;
+	  }
+	}
+}
+
+
+/*  Medium Desktop  */
+@media (min-width:992px){
+
+  /* Column clear fix */
+  #products {
+	  .col-sm-6:nth-of-type(2n+1){
+	    clear: none;
+	  }
+
+	  .col-md-4:nth-of-type(3n+1){
+	    clear: left;
+	  }
+	}
+}
+
+
 /* Products Landing Page */
 #product-images #main-image {
 	border: none;
