--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
 
 				<div class="seller-info">
 					<h3 class="seller-name"><%= product.name %></h3>
-					<p class="product-descr"><%= product.description %></p>
+					<p class="product-descr"><%= truncate(product.description, :length => 200) %></p>
 				</div>
 				<% end %>
 			</div>
