--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,6 +32,7 @@
               <li><a href="/<%= current_user.id %>">Profile</a></li>
               <li class="divider"></li>
               <li><%= link_to "My Store", "/store/admin" %></li>
+              <li><%= link_to "New Product", "/store/admin/products/new" %></li>
               <li><%= link_to "Edit Profile", edit_path(@user) %></li>
               <li><%= link_to "Log Out", logout_path %></li>
             </ul>
