footer markup tweak

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,16 @@
 <footer>
   <div class="top">
     <div class="container">
-      <div class="col-xs-12">
-         <ul class="list-inline social text-center">
-          <li><a href="https://www.facebook.com/pages/Leema/1505609129699476" target="_blank"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="http://instagram.com/leemaeats" target="_blank"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://twitter.com/leemaeats" target="_blank"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://www.youtube.com/channel/UC7UjjURDMJgkWiMWKeqE10w?guided_help_flow=3" target="_blank"><i class="fa fa-youtube"></i></a></li>
-        </ul>
-      </div><!-- close .col-xs-12 -->
+      <div class="row">
+        <div class="col-xs-12">
+           <ul class="list-inline social text-center">
+            <li><a href="https://www.facebook.com/pages/Leema/1505609129699476" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="http://instagram.com/leemaeats" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/leemaeats" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UC7UjjURDMJgkWiMWKeqE10w?guided_help_flow=3" target="_blank"><i class="fa fa-youtube"></i></a></li>
+          </ul>
+        </div><!-- close .col-xs-12 -->
+      </div><!-- close .row -->
     </div><!-- close .container -->
   </div><!-- close .top -->
   <div class="bottom">
@@ -22,7 +24,7 @@
             <li><a href="#">Terms of Service</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Privacy Policy</a></li>
-            <li><a href="/sell/">Become a Seller</a></li>
+            <li><a href="/sell/" class="btn btn-primary">Become a Seller</a></li>
           </ul>
         </div>
       </div><!--/row-->
