--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -481,7 +481,13 @@ footer {
 	}
 
 	p {
-		font-size: 14px !important;
+		font-size: 13px !important;
+		padding: 6px 0;
+		margin: 0px;
+	}
+
+	.row {
+		margin-bottom: 0px;
 	}
 }
 
@@ -512,6 +518,13 @@ footer ul.social li a:hover {
 
 .footer-links {
 	text-align: right;
+	margin-bottom: 0px;
+
+	.btn.btn-primary {
+		color: #fff;
+		font-size: 13px;
+	}
+
 }
 
 @media only screen and (max-width: 767px){
