syncing footer styles

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -519,6 +519,7 @@ footer ul.social li a:hover {
 .footer-links {
 	text-align: right;
 	margin-bottom: 0px;
+	font-size: 13px;
 
 	.btn.btn-primary {
 		color: #fff;
